mesa (10.2.5-1) UNRELEASED; urgency=medium

  * New upstream release.
    - nv50: fix build failure on m68k due to invalid struct alignment
      assumptions (Closes: #728053).
    - i915: Fix up intelInitScreen2 for DRI3 (Closes: #754297).

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Mon, 04 Aug 2014 10:30:18 +0200

mesa (10.2.4-1) unstable; urgency=medium

  * New upstream release.

 -- Julien Cristau <jcristau@debian.org>  Sun, 20 Jul 2014 10:20:05 +0200

mesa (10.2.3-1) unstable; urgency=low

  [ Maarten Lankhorst ]
  * New upstream release.

  [ Julien Cristau ]
  * Add debian/upstream/signing-key.asc, and add pgpsigurlmangle option to
    debian/watch so uscan can check signatures on release tarballs.

 -- Julien Cristau <jcristau@debian.org>  Wed, 09 Jul 2014 19:39:06 +0200

mesa (10.2.2-1) unstable; urgency=medium

  [ Andreas Boll ]
  * New upstream release.
    - glx: Don't crash on swap event for a Window (non-GLXWindow)
      (Closes: #685328).
    - 01_targets-xa-limit-the-amount-of-exported-symbols.diff dropped,
      upstream
  * Cherry-pick commit b4dcf87 (glxext: Send the Drawable's ID in the
    GLX_BufferSwapComplete event) from upstream, fixes intel + dri3.

 -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Thu, 03 Jul 2014 09:54:48 +0200

mesa (10.2.1-2) unstable; urgency=medium

  * Upload to unstable.

 -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Mon, 23 Jun 2014 12:00:09 +0200

mesa (10.2.1-1) experimental; urgency=medium

  [ Andreas Boll ]
  * New upstream release.
    - 01_glapi-Duplicate-GLES1-prototypes-in-glapi_dispatch.c.diff
      dropped, upstream
  * Add 01_targets-xa-limit-the-amount-of-exported-symbols.diff, fixes
    FTBFS with gcc-4.9.
  [ Maarten Lankhorst ]
  * Attempt to fix a FTBFS on hurd.

 -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Mon, 16 Jun 2014 15:41:59 +0200

mesa (10.2.0~rc4-2) experimental; urgency=medium

  [ Andreas Boll ]