@@ -1,9 +1,13 @@
 mesa (10.2.5-1) UNRELEASED; urgency=medium
 
+  [ Andreas Boll ]
   * New upstream release.
     - nv50: fix build failure on m68k due to invalid struct alignment
       assumptions (Closes: #728053).
     - i915: Fix up intelInitScreen2 for DRI3 (Closes: #754297).
+
+  [ Maarten Lankhorst ]
+  * Enable support for freedreno.
 
  -- Andreas Boll <andreas.boll.dev@gmail.com>  Mon, 04 Aug 2014 10:30:18 +0200
 
